frontend/src/pages/Dashboard/Dashboard.css
.metricCards {
  display: flex;
  justify-content: center;
  width: 100%;
  gap: 20px;
  margin-top: 30px;
  height: auto;
  flex-wrap: wrap;
}

.chart-section {
  display: flex;
}

.chart-dashboard {
  padding: 24px 24px;
  border-radius: 10px;
  height: 400px;
  box-shadow: 1px 10px 10px 1px rgba(171, 171, 171, 0.2);
  width: 65%;
  margin-top: 20px;
}

